--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,2 +1,3 @@
 /** Stylus Styles */
 @import '../../node_modules/vuetify/src/stylus/main'
+@import "../../node_modules/vue-wysiwyg/dist/vueWysiwyg.css";
